# my-ai-app

./: Dockerfile  all_rest_methods.py  app.py  delete_response.py  example.py  genai_app.py  get_response.py  patch_response.py  path_parameter.py  post_response.py  put_response.py  pyproject.toml  requirements.txt  test_summarize.py
.github/workflows/: gcp-deploy.yaml  huggingface.yaml
